--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,20 +1,20 @@
 # default group
-* @pcdshub/twincat-reviewers
+* @pcdshub/xbd-members @pcdshub/vacuum-sme
 
 # language-specific group(s)
 ## TWINCAT files
-*.tsproj @pcdshub/twincat-reviewers
-*.plcproj @pcdshub/twincat-reviewers
-*.tmc @pcdshub/twincat-reviewers
-*.tpr @pcdshub/twincat-reviewers
-*.xti @pcdshub/twincat-reviewers
-*.TcTTO @pcdshub/twincat-reviewers
-*.TcPOU @pcdshub/twincat-reviewers
-*.TcDUT @pcdshub/twincat-reviewers
-*.TcGVL @pcdshub/twincat-reviewers
-*.TcVis @pcdshub/twincat-reviewers
-*.TcVMO @pcdshub/twincat-reviewers
-*.TcGTLO @pcdshub/twincat-reviewers
+*.tsproj @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.plcproj @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.tmc @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.tpr @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.xti @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.TcTTO @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.TcPOU @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.TcDUT @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.TcGVL @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.TcVis @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.TcVMO @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
+*.TcGTLO @pcdshub/twincat-reviewers @pcdshub/xbd-members @pcdshub/vacuum-sme
 
 # github folder holds administrative files
 .github/** @pcdshub/software-admin
